--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@
         <div id="scanner" class="status-scanner"></div>
         
         <div class="logo-box">
+            <!-- 插入state.grid.svg -->
+            <svg href="./state-grid.svg"></svg>
             <svg width="200" height="60" viewBox="0 0 450 120">
-                <circle cx="50" cy="60" r="45" fill="none" stroke="#00ffa2" stroke-width="2"/>
-                <path d="M50 15 A45 45 0 0 1 50 105 M20 35 A45 45 0 0 1 80 35 M20 85 A45 45 0 0 0 80 85" fill="none" stroke="#00ffa2" stroke-width="2"/>
-                <line x1="50" y1="15" x2="50" y2="105" stroke="#00ffa2" stroke-width="2"/>
-                <line x1="15" y1="60" x2="85" y2="60" stroke="#00ffa2" stroke-width="2"/>
                 <text x="110" y="75" font-family="Arial Black" font-size="52" fill="#00ffa2">STATE GRID</text>
                 <text x="110" y="105" font-family="SimSun" font-size="24" fill="#00ffa2" style="letter-spacing:8px">国家电网</text>
             </svg>
