--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             width: 180px; height: 60px; margin: 0 auto 30px;
             background-color: var(--sgcc-neon);
             /* 将图片作为遮罩，这样背景色(荧光绿)就会填充图片形状 */
-            -webkit-mask: url('./state-grip.svg') no-repeat center / contain;
-            mask: url('./state-grip.svg') no-repeat center / contain;
+            -webkit-mask: url('./state-grid.svg') no-repeat center / contain;
+            mask: url('./state-grid.svg') no-repeat center / contain;
             filter: drop-shadow(0 0 8px var(--sgcc-neon));
         }
 
